# git-gud

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DEMO.md  README.md  test_gui.sh  test_unstage_bug.rs
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: spec-fix-panel-margins.md
_bmad-output/planning-artifacts/: ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
src/: cli.rs  index.html  lib.rs  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  models.rs  watcher.rs
src/models/: diff.rs  mod.rs  ssh_config.rs
src/services/: askpass.rs  diff_parser.rs  file_watcher_service.rs  git_command.rs  git_service.rs  log_service.rs  mod.rs  repository_service.rs  syntax_service.rs
src/state/: app_state.rs  mod.rs  prefs.rs  repository_state.rs  ui_state.rs
src/tests/: diff_integration_tests.rs  git_service_tests.rs  integration_tests.rs  main_window_tests.rs  mod.rs  ui_tests.rs
src/ui/: colors.rs  commit_view.rs  main_window.rs  mod.rs  repository_view.rs
src/ui/components/: branch_list.rs  command_log.rs  commit_graph.rs  commit_panel.rs  diff_viewer.rs  enhanced_diff_viewer.rs  error_dialog.rs  file_dialog.rs  file_history.rs  file_list.rs  mod.rs  passphrase_dialog.rs  toolbar.rs  (+2 more)
test_data/: example.js  example.md  example.py  example.rs
