[package]
name = "git-gud"
version = "0.1.0"
edition = "2024"
description = "A modular Git GUI application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/git-gud"
readme = "README.md"

[dependencies]
# GUI framework
eframe = "0.27.0"
egui = "0.27.0"
egui_extras = "0.27.0"

# Git operations
git2 = "0.20.0"

# Logging
log = "0.4.21"
env_logger = "0.11.3"



# Error handling
anyhow = "1.0.86"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }

# Temporary files for testing
tempfile = "3.10.1"

# Better mutex implementation
parking_lot = "0.12"

# File dialogs
rfd = "0.14.0"

# File system notifications
notify = "6.1.1"

# Platform directories
dirs = "5.0.0"

# Syntax highlighting
syntect = { version = "5.3.0", features = ["default-onig", "default-syntaxes", "default-themes"] }

# Async operations
tokio = { version = "1.0", features = ["full"] }

# Caching
lru = "0.12.0"

[dev-dependencies]
serde_json = "1.0"
# Test utilities (if needed later)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
